--- a/style.css
+++ b/style.css
@@ -280,7 +280,39 @@ a:hover {
 
 .repository-text {color: white;}
 
+.reproductor {
+  position: absolute;
+  bottom: 20px;       /* lo colocas cerca de la parte baja del bloque */
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 20;        /* que quede por encima de otros elementos */
+}
 
+.reproductor {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 20;
+
+  opacity: 0;          /* Oculto al inicio */
+  transform: translate(-50%, 20px); /* bajito al inicio */
+  transition: opacity 1s ease, transform 1s ease;
+}
+
+.reproductor.visible {
+  opacity: 1;
+  transform: translate(-50%, 0); /* vuelve a su posición original */
+}
+
+.reproductor {
+  opacity: 0;
+  transform: scale(0.3);
+}
+
+.reproductor.visible {
+  animation: bounceIn 0.8s ease forwards;
+}
 
 
 
